--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="styles" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
-
 <body>
   <section class=" sticky-top">
     <div class="container-fluid  sticky-top p-0 ">
@@ -185,6 +184,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/3a2b93700b.js" crossorigin="anonymous"></script>
-<script src="/portfolio/java.js"></script>
-
+<script src="./java.js"></script>
 </html>
