Added some code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="row">
         <div class="col-mg-12">
-          <div class="in-bdiv info w-75   ">
+          <div class=" info w-75 ">
             <h3 class="pb-4 pe-5 fs-5">Hello, It's Me </h3>
             <h1 class="name  pb-4  pe-5 fs-1  ">Mridhul.P.Nair</h1>
             <h4 class="pb-4 pe-5 fs-5">I am a <u>frontend developer</u>.I am a Tech enthusiast guy and I love to explore new
