--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col-mg-12">
           <div class=" info w-75 ">
             <h3 class="pb-4 pe-5 fs-5">Hello, It's Me </h3>
-            <h1 class="name  pb-4  pe-5 fs-1  ">Mridhul.P.Nair</h1>
+            <p class="name  pb-4  pe-5 fs-1  ">Mridhul.P.Nair</p>
             <h4 class="pb-4 pe-5 fs-5">I am a <u>frontend developer</u>.I am a Tech enthusiast guy and I love to explore new
               thing to Enhance my knowledge. </h4>
           </div>
@@ -85,58 +85,60 @@
       </div>
       <div class="row py-5">
         <div class="col-md-4">
-          <div class="card">
+          <div class="card crd1">
             <img src="./image/Python  Logo.png" class="card-img-top w-25 m-auto" alt="python">
             <div class="card-body text-center p-0">
               <h5 class="card-title">Basic Python</h5>
-              <p class="card-text">I'm studing Python form my 12th standard .I secure centum in Python language .</p>
+              <p class="card-text">I am proficient in Python, with expertise in basic concepts, data handling, and automation. My skills include using popular libraries and frameworks for data analysis, web development, and scripting. I prioritize best practices and leverage modern tools for testing and debugging to ensure high-quality code development.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img src="./image/html logo.jpg" class="card-img-top w-25 m-auto" alt="html">
+          <div class="card crd2">
+            <img src="./image/html logo.jpg" class="card-img-top w-50 m-auto" alt="html">
             <div class="card-body text-center">
               <h5 class="card-title">HTML</h5>
-              <p class="card-text">I studied HTML in online throught websites, youtube..  .</p>
+              <p class="card-text">I am proficient in HTML, with expertise in creating semantic, responsive, and accessible web pages. My skills include building complex forms, integrating multimedia, and adhering to best practices for clean and maintainable code. I excel in leveraging HTML5 features and ensuring seamless integration with CSS and JavaScript for dynamic, interactive websites
+
+              </p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img src="./image/css logo.jpg" class="card-img-top w-25 m-auto" alt="css">
+          <div class="card crd3">
+            <img src="./image/css logo.jpg" class="card-img-top w-50 m-auto" alt="css">
             <div class="card-body text-center">
               <h5 class="card-title">CSS</h5>
-              <p class="card-text">I studied CSS in online throught websites, youtube..  . .</p>
+              <p class="card-text">I am adept at using CSS to design responsive and visually appealing web pages. My skills include leveraging CSS3 features, preprocessors, and frameworks to create dynamic and efficient stylesheets. I prioritize best practices and performance optimization to ensure clean, maintainable, and fast-loading websites.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="row py-5">
         <div class="col-md-4">
-          <div class="card">
-            <img src="./image/bootstrap logp.jpg" class="card-img-top w-25 m-auto" alt="bootstrap">
+          <div class="card crd4">
+            <img src="./image/bootstrap logp.jpg" class="card-img-top w-75 m-auto" alt="bootstrap">
             <div class="card-body text-center">
               <h5 class="card-title">BOOTSTRAP</h5>
-              <p class="card-text">I studied BOOTSTRAP in online throught websites, youtube..  .using it we can create a webpage in a easy manner .</p>
+              <p class="card-text">Proficient in using Bootstrap to create responsive, mobile-first web pages quickly and efficiently. Skilled in utilizing its extensive library of pre-designed components and utilities to enhance UI/UX. Experienced in customizing Bootstrap themes to meet specific design requirements.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img src="./image/c++ logo.png" class="card-img-top w-25 m-auto" alt="C++">
+          <div class="card crd5">
+            <img src="./image/c logo.jpg" class="card-img-top w-50 m-auto" alt="C">
             <div class="card-body text-center p-3">
-              <h5 class="card-title">Basic C++</h5>
-              <p class="card-text">I studied C++ during my college .I secure a good mark in C++ ,I know all basic in C++ .</p>
+              <h5 class="card-title">Basic C</h5>
+              <p class="card-text">I am proficient in C, with expertise in core concepts, data structures, and system programming. My skills include developing algorithms, handling memory management, and programming for embedded systems. I prioritize standards compliance and use debugging tools to ensure efficient, reliable, and maintainable code.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img src="./image/logo-javascript.png" class="card-img-top w-25 m-auto" alt="js">
+          <div class="card crd6">
+            <img src="./image/logo-javascript.png" class="card-img-top w-50 m-auto" alt="js">
             <div class="card-body text-center p-0">
               <h5 class="card-title">Basic JavaScript</h5>
-              <p class="card-text">I studied JAVA SCRIPT in online source throught websites, youtube..  . .</p>
+              <p class="card-text">I am proficient in JavaScript, with expertise in core concepts, DOM manipulation, and asynchronous programming. My skills include working with modern frameworks and libraries, handling events, and integrating APIs. I prioritize best practices and leverage modern tooling for efficient and maintainable code development</p>
             </div>
           </div>
         </div>
@@ -162,7 +164,7 @@
 
           <a href="https://www.instagram.com/mridhul_official/" class="fa fa-instagram button2" aria-hidden="true" target="_blank"></a>
 
-          <a class="fa fa-linkedin button3" aria-hidden="true"></a>
+          <a href="https://www.linkedin.com/in/mridhul-p-nair-1b3535274/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="fa fa-linkedin button3" aria-hidden="true" target="_blank"></a>
 
           <a class="fa fa-twitter button4" aria-hidden="true"></a>
 
